tests/cmp/record-pat-dotdot-outside-braces.golden
tests/cmp/record-pat-dotdot-outside-braces.trp:3:9: parse error
  3 |     val .. {a, b} = r
    |         ^
  unexpected '..'
  expected expression or '_'

